March 2012 3.7
  - Login: support bind user for login search
  - Personal: added labeledURI and cosmetic changes, description is now multi-valued (RFE 3446363)
  - File upload: support custom scripts postCreate (LAM Pro)
  - New translation: Slovakian
  - removed phpGroupWare support (project no longer exists)
  - LAM Pro:
   -> Password self reset can send password notification mails
   -> Zarafa archiver support
  - Fixed bugs:
   -> DHCP: error message not displayed properly (3441975)
   -> Profile loading not possible if required fields are not filled (3444948)
   -> Tree view: unable to add object class (3446037)
   -> Edit page: unable to move accounts to different OU


23.11.2011 3.6.1
  - LAM Pro: fixed password reset function


22.11.2011 3.6
  - support HTTP authentication for admin pages and self service
  - new modules
   -> authorizedServiceObject
   -> FreeRadius
  - LAM Pro
   -> added password self reset feature
   -> Zarafa 7 support
   -> Zarafa support for dynamic groups, address lists and contacts
   -> Unix: group of names can be managed on user edit page
  - Fixed bugs:
   -> Unix: check for upper-case characters in user name (3416180)


09.08.2011 3.5.0
  - New modules:
   -> "General information": shows internal data about accounts (e.g. creation time)
   -> "Quota": manage filesystem quota inside LDAP (Linux DiskQuota) (RFE 1811449)
  - Personal: New attributes o, employeeNumber, initials
  - Unix: Support to create home directories on multiple servers and also for existing users
  - Server information shows data from cn=monitor
  - Lots of small improvements
  - LAM Pro:
   -> Automount: allow to create automount maps
   -> Password policy: allow to (un)lock accounts
  - Fixed bugs:
   -> Owner attribute is multi-valued (3300727)

2011-04-25 3.4.0
  - IMAP mailboxes:
   -> support to read user name from uid attribute
   -> added quota management
  - Personal: added additional options for account profiles