@@ -923,6 +923,9 @@ class lamList {
 		}
 		elseif (isset($_GET['uploadAllOk'])) {
 			StatusMessage('INFO', _("Upload has finished"));
+			if (isset($_SESSION['mass_pdf']['file'])) {
+				StatusMessage('INFO', sprintf(_('You can download your PDF files {link=%s}here{endlink}.'), '../' . $_SESSION['mass_pdf']['file']));
+			}
 		}
 		elseif (isset($_SESSION['listRedirectMessages'])) {
 			for ($i = 0; $i < sizeof($_SESSION['listRedirectMessages']); $i++) {
